--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="nav_header_subtitle">Institut Teknologi Sumatera</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_about">About</string>
+    <string name="title_activity_direction">Map</string>
 </resources>
